--- a/WebDev Course/VidTube/package.json
+++ b/WebDev Course/VidTube/package.json
@@ -22,8 +22,10 @@
     "prettier": "^3.4.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0"
   }
 }
