add basic healthcheck

--- a/WebDev Course/VidTube/src/.env.sample
+++ b/WebDev Course/VidTube/src/.env.sample
@@ -1,2 +1,8 @@
 PORT=
+CORS_ORIGIN= #ADD THE frontend URL HERE
 MONGO_URI=
+
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRY=
